--- a/ultiprep-ui/www/views/sub-views/notes.groups.view.html
+++ b/ultiprep-ui/www/views/sub-views/notes.groups.view.html
@@ -6,6 +6,7 @@
         </div>
         <div class="group-members">
             <ul>
+                <li ng-show="isMember(group)">You are a member</li>
                 <li ng-repeat="member in group.members">
                     {{users[member]}}
                 </li>
