--- a/ultiprep-ui/www/views/sub-views/notes.tags.view.html
+++ b/ultiprep-ui/www/views/sub-views/notes.tags.view.html
@@ -1,5 +1,5 @@
 <div class="container notes-container" ng-cloak>
-    <div class="masonry-item note" ng-class="{'note-bg-pinned' : note.isPinned[currentUser._id], 'note-bg' : !note.isPinned[currentUser._id]}" ng-repeat="note in filteredNotes = ((notes | ngRepeatFinish:this) | filterNonTrashed:currentUser | searchFor:searchString | filterTags:selectedTags | orderBy: '-isPinned[currentUser._id]')">
+    <div class="masonry-item note" ng-class="{'note-bg-pinned' : note.isPinned[currentUser._id], 'note-bg' : !note.isPinned[currentUser._id]}" ng-repeat="note in filteredNotes = ((notes | ngRepeatFinish:this) | filterNonTrashed:currentUser | searchFor:searchString | filterTags:selectedTags | orderNotes: currentUser)">
         <div class="note-main" data-toggle="modal" data-target="#note-view-modal-{{$index}}">
             <h3 class="note-title">{{ note.title }}</h3>
             <p class="note-content" froala-view="note.content | noteTilePrettify"></p>
@@ -108,5 +108,10 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="add-note-btn">
+    <div title="Add a new note" class="opt-tooltip add-div">
+        <button class="add-btn" ng-click="createNote();">+</button>
     </div>
 </div>
