--- a/ultiprep-ui/www/views/sub-views/notes.groups.view.html
+++ b/ultiprep-ui/www/views/sub-views/notes.groups.view.html
@@ -8,7 +8,7 @@
             <ul>
                 <li ng-show="isMember(group)">You are a member</li>
                 <li ng-repeat="member in group.members">
-                    {{users[member]}}
+                    <span ng-hide="isSelf(member)">{{users[member]}}</span>
                 </li>
             </ul>
         </div>
